Fix incorrect linux device name lookup (compare the whole device name, not just the beginning).
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1565]

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 WMND 0.4.13:
 
 	* Fixed crash due to buffer overflow on 64bit systems.
+	* Fixed incorrent device name lookup on linux.
 
 
 WMND 0.4.12:
