Rewrite Becker's patch to use just a single pipe, do not kill random pids, less resources needed.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1568]

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,8 @@
 WMND 0.4.13:
 
 	* Fixed crash due to buffer overflow on 64bit systems.
-	* Fixed incorrent device name lookup on linux.
+	* Fixed incorrect display on linux for devices having similar names.
+	* Enhanced trend support.
 
 
 WMND 0.4.12:
