--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ WMND 0.4.13:
 	* Fixed crash due to buffer overflow on 64bit systems.
 	* Fixed incorrect display on linux for devices having similar names.
 	* Enhanced trend support.
+	* Fixed FreeBSD driver on 64bit systems.
 
 
 WMND 0.4.12:
