Removed support for INEXACT_TIMING. We're supposed to show correct stats after all.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1572]

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ WMND 0.4.13:
 	* Enhanced trend support with live monitoring (even with multiple
 	  interfaces at once), customizable flags and history.
 	  Trend support is now on by default.
+	* Removed support for "inexact timing".
 
 
 WMND 0.4.12:
