Do not blink leds when an interface is offline (better behavior for sine_dummy). Check drifts using milliseconds instead of tenths, reducing cumulative roundoffs. Remove support for --enable-sine-dummy: this is now the only supported dummy driver.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1574]

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ WMND 0.4.13:
 	  interfaces at once), customizable flags and history.
 	  Trend support is now on by default.
 	* Removed support for "inexact timing".
+	* The enhanced dummy driver is now the default.
 
 
 WMND 0.4.12:
