Updating THANKS; removing dead urls. Reed, if you can read this, please get in touch. All your addresses are dead!
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1576]

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,6 @@ Copyright(c) 1993-1994 by Kresten Krab Thorup
 Copyright(c) 1994 by The Australian National University.
 Copyright(c) 1997 by Alfredo K. Kojima
 Copyright(c) 2000-2001 by Reed Lai
+Copyright(c) 2001 by Arthur Korn <arthur@korn.ch>
 Copyright(c) 2001 by Timecop <timecop@japan.co.jp>
 Copyright(c) 2001-2008 by wave++ "Yuri D'Elia" <wavexx@users.sf.net>
