--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -1,12 +1,14 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 .\"
-.\" This documentation may be distributed under the terms of
-.\" the GNU General Public Licence version 2.
+.\" Copyright(c) 2001 by Arthur Korn <arthur@korn.ch>
+.\" Copyright(c) 2001-2008 by wave++ "Yuri D'Elia" <wavexx@users.sf.net>
+.\"
+.\" Distributed under GNU GPL (v2 or above) WITHOUT ANY WARRANTY.
 .\"
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH WMND 1 "Apr 10, 2004"
+.TH WMND 1 "Jan 29, 2008"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -219,4 +221,5 @@ distribution. These informations should be integrated here too.
 .BR trend (1)
 .SH AUTHOR
 This manual page was written by Arthur Korn <arthur@korn.ch>.
-The original \fBWMND\fR authour is Reed Lai <reed@wingeer.org>.
+The original \fBWMND\fR authour is Reed Lai, but it is currently
+maintained by Yuri D'Elia <wavexx@users.sf.net>.
