Remove spurious black line at the bottom of the pixmap.
The pixmap used some data at exactly y=63, which would show up for a 64x64
size. Due to the sunken edges of most icon themes/black themes, I never
noticed it before. Thanks to Mikael Magnusson for noticing this.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 WMND 0.4.14:
 
 	* Fixed build on newer GLIBC versions.
+	* Remove spurious black line at the bottom of the pixmap
+	  (Thanks to Mikael Magnusson)
 
 
 WMND 0.4.13:
