--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -199,7 +199,7 @@ details.
 .B testing_dummy
 This is the "last resort" driver, it shows a null device useful only
 to make \fBWMND\fP don't exit when all other drivers failed. Can be
-enchanced to display something at compile time.
+enhanced to display something at compile time.
 .SH FILES
 ~/.wmndrc	User configuration.
 .PP
@@ -211,9 +211,9 @@ coming with the distribution (see \fI/usr/share/doc/wmnd/\fP).
 Clean WMND shutdown.
 .SH BUGS
 Report bugs and suggestion to the current \fBWMND\fR maintainer:
-wave++ <wavexx@users.sf.net>. More informations (including usage
+wave++ <wavexx@users.sf.net>. More information (including usage
 instructions) can be found into the README file found into the
-distribution. These informations should be integrated here too.
+distribution. These information should be integrated here too.
 .SH SEE ALSO
 .BR X (3x),
 .BR wmaker (1x),
