--- a/NEWS
+++ b/NEWS
@@ -1,21 +1,25 @@
-WMND 0.4.16:
+WMND 0.4.16
+-----------
 
 	* Fixed build failure on FreeBSD 8.1.
 
 
-WMND 0.4.15:
+WMND 0.4.15
+-----------
 
 	* Fixed build failure of the SNMP driver.
 
 
-WMND 0.4.14:
+WMND 0.4.14
+-----------
 
 	* Fixed build on newer GLIBC versions.
 	* Remove spurious black line at the bottom of the pixmap
 	  (Thanks to Mikael Magnusson)
 
 
-WMND 0.4.13:
+WMND 0.4.13
+-----------
 
 	* Fixed crash due to buffer overflow on 64bit systems.
 	* Fixed incorrect display on linux for devices having similar names.
@@ -28,7 +32,8 @@ WMND 0.4.13:
 	* The enhanced dummy driver is now the default.
 
 
-WMND 0.4.12:
+WMND 0.4.12
+-----------
 
 	* Executed processes are no longer left as zombies.
 	* Solaris 7 build fixes and kstat enhancements.
@@ -36,26 +41,30 @@ WMND 0.4.12:
 	* Maintainers warning: some flag names changed in 'configure'.
 
 
-WMND 0.4.11:
+WMND 0.4.11
+-----------
 
 	* Édition spécial Parisienne!
 	* Added support for history zoom/inspection through trend.
 	  See README for more details.
 
 
-WMND 0.4.10:
+WMND 0.4.10
+-----------
 
 	* Fixed generic_snmp for old snmpd by probing both ifName and
 	  ifDesc. --enable-snmp-descr is no longer needed.
 
 
-WMND 0.4.9:
+WMND 0.4.9
+----------
 
 	* The auto-generated wmndrc now only includes changed values.
 	* Added a geometry flag (-g, requested by Johannes Middeke).
 
 
-WMND 0.4.8:
+WMND 0.4.8
+----------
 
 	* linux_proc supports multiple interfaces on the command
 	  line (integrated patch wmnd-0.4.7-lxext, requested by
@@ -69,7 +78,8 @@ WMND 0.4.8:
 	  Jeff Greenfield a looong time ago).
 
 
-WMND 0.4.7:
+WMND 0.4.7
+----------
 
 	* WMND statistics are more accurate now with a finer
 	  time-based method (should remove a 10% error). You can switch
@@ -86,7 +96,8 @@ WMND 0.4.7:
 	  instances into a single dock.
 
 
-WMND 0.4.6:
+WMND 0.4.6
+----------
 
 	* Fixed a typo in the configure script that could cause some
 	  shells to interrupt the configuration.
@@ -94,7 +105,8 @@ WMND 0.4.6:
 	  is usually shorter. Again, issues in the README.
 
 
-WMND 0.4.5:
+WMND 0.4.5
+----------
 
 	* Added a new IF-MIB snmp driver! You can now monitor local
 	  and remote snmp interfaces a-la MRTG, but in realtime! Read
@@ -102,12 +114,14 @@ WMND 0.4.5:
 	* Some packaging 'hints' into the README.
 
 
-WMND 0.4.4a:
+WMND 0.4.4a
+-----------
 
 	* Fixed a bug into the solaris_fpppd driver (won't compile).
 
 
-WMND 0.4.4:
+WMND 0.4.4
+----------
 
 	* WMND can now be quiet (-q/Q or quiet into ~/.wmndrc).
 	* Fixed some parts of the configure script. Some options have
@@ -144,7 +158,8 @@ WMND 0.4.4:
 	  now use it for ppp links.
 
 
-WMND 0.4.3:
+WMND 0.4.3
+----------
 
 	* Fixed a minor bug into the freebsd_sysctl driver that would
 	  crash WMND under some circumstances.
@@ -152,7 +167,8 @@ WMND 0.4.3:
 	* Minor code/spell corrections.
 
 
-WMND 0.4.2:
+WMND 0.4.2
+----------
 
 	* added the missing -lkstat flag to the solaris kstat driver.
 	* the graph scrolling speed is now specified in tenth of seconds
@@ -167,12 +183,14 @@ WMND 0.4.2:
 	* Tune-up of the freebsd_sysctl driver
 
 
-WMND 0.4.1:
+WMND 0.4.1
+----------
 
 	* fixed the solaris fpppd driver
 
 
-WMND 0.4.0:
+WMND 0.4.0
+----------
 
 	* auto-detection stuff
 	* remove visualization modes from configure
