Doc fixes: follow the suggestions form Alexey I. Froloff
- Fix FSF address in COPYING, src/list.h
- Recode NEWS to UTF-8

--- a/NEWS
+++ b/NEWS
@@ -44,7 +44,7 @@ WMND 0.4.12
 WMND 0.4.11
 -----------
 
-	* Édition spécial Parisienne!
+	* Ã‰dition spÃ©cial Parisienne!
 	* Added support for history zoom/inspection through trend.
 	  See README for more details.
 
