Remove my old address from the sources.

--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -1,7 +1,7 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 .\"
 .\" Copyright(c) 2001 by Arthur Korn <arthur@korn.ch>
-.\" Copyright(c) 2001-2008 by wave++ "Yuri D'Elia" <wavexx@users.sf.net>
+.\" Copyright(c) 2001-2008 by wave++ "Yuri D'Elia" <wavexx@thregr.org>
 .\"
 .\" Distributed under GNU GPL (v2 or above) WITHOUT ANY WARRANTY.
 .\"
@@ -211,7 +211,7 @@ coming with the distribution (see \fI/usr/share/doc/wmnd/\fP).
 Clean WMND shutdown.
 .SH BUGS
 Report bugs and suggestion to the current \fBWMND\fR maintainer:
-wave++ <wavexx@users.sf.net>. More information (including usage
+wave++ <wavexx@thregr.org>. More information (including usage
 instructions) can be found into the README file found into the
 distribution. These information should be integrated here too.
 .SH SEE ALSO
@@ -222,4 +222,4 @@ distribution. These information should be integrated here too.
 .SH AUTHOR
 This manual page was written by Arthur Korn <arthur@korn.ch>.
 The original \fBWMND\fR authour is Reed Lai, but it is currently
-maintained by Yuri D'Elia <wavexx@users.sf.net>.
+maintained by Yuri D'Elia <wavexx@thregr.org>.
